# fastapi-demo

./: .env.example  alembic.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
alembic/: env.py
alembic/versions/: 2025_05_18_4e5b9a88843a_init.py
src/: config.py  db.py  main.py
src/posts/: dependencies.py  models.py  routes.py  schemas.py
src/users/: dependencies.py  models.py  routes.py  schemas.py
